# sonos-display

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.py  pyproject.toml  requirements.txt  run.sh  startup.sh
.github/workflows/: dockerhub.yml
app/: index.py  settings.py
src/: index.py  settings.py
static/css/: main.css
templates/: index.html
