[tool.poetry]
name = "sonos-display"
version = "0.1.0"
description = ""
authors = ["Rick Stiphout <rick@nextpertise.nl>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
soco = "^0.22.6"
pydantic = "^1.8.2"
cachetools = "^4.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
